(BSR)[PRO] fix: use formlayout row settings for spacing (#21557)

--- a/pro/src/components/SignupJourneyForm/Authentication/OffererAuthenticationForm.module.scss
+++ b/pro/src/components/SignupJourneyForm/Authentication/OffererAuthenticationForm.module.scss
@@ -10,12 +10,4 @@
   flex-wrap: wrap;
   align-items: center;
   gap: var(--size-spacing-xl);
-
-  & > div {
-    flex-grow: 1;
-  }
-}
-
-.manual-address-button {
-  margin-top: var(--size-spacing-l);
 }
